# Simple-Robot-Face-Rendering

./: .gitignore  CMakeLists.txt  Claude.md  README.md  build-all.sh  build-native.sh  build-wasm.sh  run-native.sh  run-web.sh
common/: robot_face.h
docs/: FINAL_SUMMARY.md  STATUS.md  comparison.md
raylib/: CMakeLists.txt  README.md
raylib/include/: robot_face.h  robot_face.hpp  robot_face_config.h
raylib/src/: main.c  main.cpp  robot_face.c  robot_face.cpp  robot_face_draw.c  robot_face_raylib.c
raylib/web/: build_wasm.sh  shell_minimal.html
skia/src/: robot_face_skia.cpp
web/: comparison.html  index.html
